# Cpp-Playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Pimpl-performance/: README.md  abstract_class.cpp  abstract_class.h  inline_class.h  main.cpp  pimpl-performance  pimpl_class.cpp  pimpl_class.h
crtp-performance/: crtp-performance  crtp_interface.cpp  crtp_interface.h  dynamic_interface.cpp  dynamic_interface.h  main.cpp
crtp_performance/: CMakeLists.txt  README.md  crtp_interface.cpp  dynamic_interface.cpp  main.cpp
pimpl_performance/: CMakeLists.txt  abstract_class.cpp  main.cpp  pimpl_class.cpp
